# RainCheck

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  biome.json  docker-compose.yml  package.json  pnpm-lock.yaml  tsconfig.base.json
.agents/: team.md
.agents/skills/simplify-refactor-review/: SKILL.md
.agents/skills/weather-synthesis-workflow/: SKILL.md
apps/api/: drizzle.config.ts  package.json  tsconfig.json
apps/api/src/: app.ts  server.ts
apps/desktop/: package.json  tsconfig.json
apps/desktop/scripts/: dev.cjs
apps/desktop/src/: local-cli-chat.test.ts  local-cli-store.test.ts  local-cli-store.ts  local-cli.test.ts  local-cli.ts  main.ts  preload.ts  protocol.ts
apps/mobile/: App.tsx  app.config.ts  app.json  package.json  tsconfig.json
apps/mobile/app/: _layout.tsx  index.tsx  web.tsx
apps/web/: .cta.json  package.json  playwright.config.ts  vite.config.ts  vitest.config.ts
docker/: nginx.conf
docs/: architecture.md  weather-capability-matrix.md  weather-tools-issue-set.md
scripts/: dev.mjs  install-weather-deps.mjs  python-bin.mjs  run-weather-dev.mjs  run-weather-tests.mjs  test-all.mjs
services/weather/: README.md  pyproject.toml
services/weather/src/raincheck_weather/: __init__.py  app.py  artifacts.py  catalog.py  comparison.py  derivations.py  errors.py  models.py  nws.py  settings.py  synthesis.py
services/weather/src/raincheck_weather.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
services/weather/tests/: test_app.py  test_artifacts.py  test_derivations.py  test_nws_service.py
(+108 files in other folders)
