[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "raincheck-weather"
version = "0.2.0"
description = "RainCheck weather-analysis service"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.116,<1.0",
  "httpx>=0.28,<1.0",
  "pydantic>=2.11,<3.0",
  "uvicorn>=0.35,<1.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.4,<9.0",
  "pytest-asyncio>=1.1,<2.0"
]
analysis = [
  "matplotlib>=3.10,<4.0",
  "metpy>=1.7,<2.0",
  "xarray>=2025.1.0,<2026.0.0"
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["src"]
